--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "targettrackr",
   "version": "1.0.0",
   "scripts": {
-    "dev": "npx webpack serve"
+    "dev": "webpack serve --mode development",
+    "build": "webpack --mode production"
   },
   "dependencies": {
     "webpack": "^5.0.0",
